# cognia_v2

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  AUDIT.md  AUDITORIA_ARQUITECTURA_IA_20260615.md  CHANGELOG.md  CLAUDE.md  CLAUDE_NOTES.md  COGNIA_ROADMAP.txt  COMERCIAL_INVENTORY.md  COMERCIAL_INVENTORY_catalog.json  COMERCIAL_SPEC.md  COMERCIAL_VERIFICATION.md  Dockerfile.coordinator  FIXES_APLICADOS.md  INFORME_APAGADO_AUTOMATICO.md  INFORME_EVOLUCION_20260611.md  INFORME_MISION_PROGRAMACION.md  INFORME_VELOCIDAD_HABLA.md  INTEGRACIONES_OSS_MAPA.md  MANAGER_AUTONOMIA_TOTAL.md  MANAGER_LOG.md  MANAGER_RULES.md  MANIFEST.in  PARCHES_EXISTENTES.py  PLAN_ASSETS_IA.md  PLAN_CREATIVIDAD.md  PROMPT_AUTOMEJORA_MEJORADO.md  README.md  REGLAS_HTML_TEMPLATE_PYTHON.md  RESEARCH.md  RESEARCH_NOCTURNA_20260721.md  ROADMAP.md  SECURITY_AUDIT.md  SHATTERING_V2_DESIGN.md  VISION.md  __init__.py  aplicar_paso4.ps1  aplicar_paso4_helper.py  (+87 more)
.github/workflows/: build_installer.yml  ci.yml  keepalive_cognia_api.yml  release.yml  (+1 more)
agent_workspace/: e2e_demo.py
app/: main.py
bdraft/: README.md  __init__.py  data.py  gates.py  gen_dataset.py  model.py  probe_throughput.py  real_data.py  train.py  train_real.py
cognia/: __init__.py  __main__.py  apply_goal_pattern_engine.ps1  attention.py  bbrain.py  busqueda_web.py  chimera.py  cli.py  cognia.py  cognia_embedding.py  compresion_salidas.py  compression.py  config.py  consola.py  consolidation_engine.py  context_injector.py  converters.py  database.py  doctor.py  effort_levels.py  enrutador.py  events.py  fatiga_cognitiva.py  first_run.py  goal_and_pattern_engine.py  ingest.py  language_engine.py  lector_web.py  llm_local.py  logger_config.py  mapa_proyecto.py  mcp_libre.py  memory_response_engine.py  model_install.py  notebook.py  perf_profiles.py  proactividad.py  razonador.py  runtime_mode.py  scale_manager.py  (+7 more)
cognia_desktop/: electron-builder.config.js  main.js  package-lock.json  package.json  playwright.config.js  preload.js
cognia_game/: capturar_gameplay.py  flappy.py  game.py
cognia_mobile/: README.md  app.json  package-lock.json  package.json
cognia_public_api/: Dockerfile  README.md  README_HF.md  admin_cli.py  app.py  inference_proxy.py  key_store.py  requirements.txt  test_final_report.py  test_live_api.py
cognia_skills/: explicar_codigo.md  redactar.md  refactorizar.md
cognia_update/: language_engine.py  model_collapse_guard.py  respuestas_articuladas.py  teacher_interface.py  web_app.py
cognia_v3/: __init__.py
cognia_x/: .gitignore  README.md  training_progress.py
coordinator/: __init__.py  app.py  contributor.py  event_bus.py  federated_store.py  rate_limiter.py  registry.py  relay.py  run.py  shard_registry.py
docs/: ARQUITECTURA_INTEGRACIONES.md  INSTALL.md  PRIVACY.md  SECURITY.md  TROUBLESHOOTING.md  refactor_guide.py
expert_forge/: __init__.py  cli_infer.py  cli_train.py  expert_maker_dataset.py  get_base_model.py  lora_trainer.py  train_expert_maker.py
generated_games/: index.json
installer/: cognia_launcher.ps1  cognia_setup.iss
network/: crdt_graph.py  mesh_node.py  privacy.py
node/: __init__.py  _fast_kernels_cffi.c  build_fast_kernels.py  client.py  downloader.py  fast_kernels.c  fleet.py  fleet_registry.py  heavy_code.py  inference_pipeline.py  llama_backend.py  local_adapter.py  main.py  nano_draft.py  qwen2_ops.py  rank_expansion.py  relay_client.py  shard_engine.py  speech_cascade.py  vocab_pruner.py
planes/: AUTOPROGRAMACION_COGNIA.md  DSPARK_GEMMA_DRAFT_MODEL.md  FLOTA_MICROEXPERTOS.md  HANDOFF_BDRAFT_V0.md  INVESTIGACION_Y_ANTIRUIDO.md  JARVIS_COGNIA.md  NOCHE_2026-07-20.md  REMOTO_JARVIS.md  beta_publica_ultraplan.md  fase_A_B_C_D_inferencia_rapida.md  plan_deuda_tecnica_80plus.md  shard_availability_architecture.md
scripts/: audit_deps.py  auto_shutdown.py  benchmark_inference.py  build_draft_model.py  build_installer.ps1  build_release.ps1  build_release.sh  build_user_profile.py  campana_tareas.py  cognia_doctor.py  cognia_research_daemon.py  cognia_setup.py  cognia_update.py  convert_hf_to_shards.py  distill.py  download_and_convert_qwen.py  e2e_100k_gate.py  e2e_bateria_final.py  e2e_clean_install.py  e2e_fleet_smoke.py  e2e_goal_hibrido.py  e2e_happy_path.py  e2e_hibrido_dificil.py  e2e_long_gen.py  e2e_oficina_programada.py  e2e_portero_install.py  e2e_razonamiento.py  entrenar_flota.py  export_kg_html.py  fleet30_download.py  fleet30_manifest.py  generate_manifest_checksums.py  install_research_daemon.py  investigar_lote.py  kg_maintenance.py  migrate_db_encrypt.py  migrate_vector_dim.py  oracle_node_setup.sh  scale_shards.py  schedule_shutdown.py  (+13 more)
security/: __init__.py  key_manager.py  ollama_url.py  secure_storage.py
shattering/: __init__.py  dynamic_precision.py  fragment_manager.py  manifest.py  mla.py  model_constants.py  moe_layer.py  orchestrator.py  recursive_context.py  router.py  tensor_parallel.py  tp_allreduce.py  tp_engine.py
storage/: db_pool.py
tests/: conftest.py  test_abstraction_engine.py  test_achievement_system.py  test_aci_trim.py  test_act_safety.py  test_action_simulator.py  test_adaptive_prompt.py  test_agent_candidates.py  test_agent_fewshot.py  test_agent_loop.py  test_agent_loop_wires.py  test_agent_memory_kg_fixes.py  test_agent_no_backend.py  test_agent_status.py  test_agent_step_budget.py  test_agent_structure.py  test_agent_tools.py  test_agent_tools_tier1.py  test_agent_workspace_default.py  test_agente_backend.py  test_analogy_engine.py  test_analytics_panel.py  test_anchor_tracker.py  test_anim_engine.py  test_api_key_auth.py  test_apply_config_avisos.py  test_architect_muestra_minima.py  test_architecture_improvements.py  test_asset_bridge.py  test_assets_backend.py  test_assets_matting.py  test_assets_prompt_expert.py  test_attention_integration.py  test_background_research.py  test_band_router.py  test_bbrain.py  test_bdraft_model.py  test_bdraft_real.py  test_bdraft_train.py  test_bench_bfcl.py  (+369 more)
tools/: auto_editor.py  clean_install_test.py  e2e_model_smoke.py  generator_improved.py
wiki/: .gitignore  CLAUDE.md
(+1782 files in other folders)
