[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognia-ai"
version = "3.2.22"
description = "Local cognitive AI with episodic memory, distributed inference, and swarm learning"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Acua124298042" }]
keywords = ["ai", "llm", "distributed", "memory", "cognia"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "flask>=2.3.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pdfplumber>=0.10.0",
    "numpy",
    "sentence-transformers>=2.2.0",
    "networkx>=3.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "cryptography>=41.0.0",
    "slowapi>=0.1.9",
    "sse-starlette>=1.6",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
]

[project.urls]
Homepage   = "https://github.com/tomascomenta-blip/cognia_v2"
Repository = "https://github.com/tomascomenta-blip/cognia_v2"

[project.scripts]
cognia             = "cognia.__main__:main"
cognia-node        = "node.main:main"
cognia-coordinator = "coordinator.run:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["cognia*", "node*", "coordinator*", "shattering*", "app*", "security*", "storage*", "network*"]

[tool.setuptools]
py-modules = [
    "respuestas_articuladas",
    "consolidation_engine",
    "feedback_engine",
    "language_corrector",
    "model_collapse_guard",
    "self_architect",
    "teacher_interface",
    "cognia_deferred",
    "cognia_modules_adicionales",
    "curiosity_engine",
    "logger_config",
    "cognia_embedding",
    "fatiga_cognitiva",
    "language_engine",
    "model_router",
    "decision_gate",
    "scoring_engine",
    "conversation_memory",
    "response_cache",
    "code_memory",
    "code_executor",
]
