[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognia-ai"
version = "3.8.2"
description = "Local cognitive AI that runs offline on a small model, with episodic memory, self-improving prompts, and an AI-native image/scene creator"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Acua124298042" }]
keywords = ["ai", "llm", "distributed", "memory", "cognia"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "flask>=2.3.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "numpy",
    "networkx>=3.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "cryptography>=41.0.0",
    "slowapi>=0.1.9",
    "sse-starlette>=1.6",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "huggingface_hub>=0.20",
    "tokenizers>=0.15",  # BPE real del pipeline de shards (fix 2026-07-08: sin esto caia a LightTokenizer y Qwen no funcionaba)
    "psutil>=5.9",
    "httpx>=0.27",
    "pillow>=10.0.0",   # creador de imagenes/escenas (cognia/lcd): render PNG/GIF
]

# Heavy/optional features are NOT installed by default: Cognia runs fully on the
# lean core (n-gram embeddings, llama.cpp). Install extras only if you want them.
#   pip install cognia-ai[semantic]   -> real sentence-transformer embeddings (pulls torch, ~2GB)
#   pip install cognia-ai[pdf]        -> read PDFs
#   pip install cognia-ai[all]        -> everything
[project.optional-dependencies]
semantic = ["sentence-transformers>=2.2.0"]
pdf      = ["pdfplumber>=0.10.0"]
# Inferencia local pip-nativa (sin cazar el binario llama-server): trae llama.cpp
# via el binding de Python. Alternativa al llama-server.exe / al path numpy-shards.
#   pip install "cognia-ai[llama]"
llama    = ["llama-cpp-python>=0.2.20"]
all      = ["sentence-transformers>=2.2.0", "pdfplumber>=0.10.0", "llama-cpp-python>=0.2.20"]

[project.urls]
Homepage   = "https://github.com/tomascomenta-blip/cognia_v2"
Repository = "https://github.com/tomascomenta-blip/cognia_v2"

[project.scripts]
cognia             = "cognia.__main__:main"
cognia-node        = "node.main:main"
cognia-coordinator = "coordinator.run:main"

[tool.setuptools.packages.find]
where   = ["."]
# IMPORTANTE: usar nombres explicitos + ".*", NO globs anchos ("cognia*").
# "cognia*" capturaba ademas cognia_desktop (bundle Electron + node_modules),
# cognia_x (lab de investigacion), cognia_game, cognia_mobile y cognia_public_api,
# inflando el paquete con ~8MB de codigo NO destinado a publicarse. (v3.7.0)
include = [
    "cognia", "cognia.*",
    "cognia_v3", "cognia_v3.*",
    "node", "node.*",
    "coordinator", "coordinator.*",
    "shattering", "shattering.*",
    "app", "app.*",
    "security", "security.*",
    "storage", "storage.*",
    "network", "network.*",
]
exclude = [
    "cognia_x", "cognia_x.*",
    "cognia_desktop", "cognia_desktop.*",
    "cognia_game", "cognia_game.*",
    "cognia_mobile", "cognia_mobile.*",
    "cognia_public_api", "cognia_public_api.*",
]

[tool.setuptools.package-data]
"shattering" = ["manifests/*.json"]
"cognia" = ["knowledge/*.json", "knowledge/*.txt", "skills/*.md"]

# (v3.6.0) Se removio el bloque py-modules: esos modulos top-level se reorganizaron
# dentro del paquete cognia_v3/ (core/memory/interfaces) y ahora se empaquetan via
# packages.find (include cognia_v3*). Mantenerlos como py-modules root rompia el build
# (los archivos ya no existen en la raiz).
